added more css to fetchArticle component

--- a/src/css/Styles.css
+++ b/src/css/Styles.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 40px;
+  padding-top: 60px;
   background-image: url('https://images.pexels.com/photos/590493/pexels-photo-590493.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
   background-size: auto;
   color: white;
@@ -32,6 +32,12 @@ section {
 
 .addArticleInput {
   width: 50%;
+  border-radius: 3px;
+  padding: 5px;
+}
+
+.addArticleCta {
+  font-size: 18px;
 }
 
 /* button {
@@ -65,4 +71,19 @@ button:hover {
     display:block;
     margin:0.4em auto;
   }
+}
+
+.thumbnail {
+  padding-top: 30px;
+  width: 80%;
+  height: auto;
+}
+
+.articleTitle {
+  font-size: 1.7em;
+}
+
+.articleDescription {
+  font-size: 1em;
+  font-weight: lighter !important;
 }
